Issue #19634: time.strftime("%y") now raises a ValueError on AIX when given a year before 1900.